ags (3.7.19)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing listing of developer manual

ags (3.7.18)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved developer manual

ags (3.7.17)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed literal comparision in ags_apply_sound_config.c

ags (3.7.16)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor improvements

ags (3.7.15)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added htmlhelp navigation and custom.css

ags (3.7.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed compiler error

ags (3.7.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_playback_domain_insert_playback()
	* improved user's handbook images with default width

ags (3.7.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_pattern_dispose() to unset fields
	* minor code improvements

ags (3.7.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_complex_get_term() and ags_complex_set_term() to query by real and imaginary part
	* improved API reference and fixed namespace and object tree
	* improved API reference and fixed missing sections

ags (3.7.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed broken API Reference Manual of libags_audio.so

ags (3.7.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* updated developer's doc chap10.xml to cover ags_fx_factory_create()
	* deprecated ags/audio/recall
	* deprecated ags/audio/ags_recall_ladspa.h and ags/audio/ags_recall_ladspa_run.h
	* deprecated ags/audio/ags_recall_dssi.h and ags/audio/ags_recall_dssi_run.h
	* deprecated ags/audio/ags_recall_lv2.h and ags/audio/ags_recall_lv2_run.h

ags (3.7.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor improvements

ags (3.7.7)
