@@ -1,3 +1,8 @@
+ags (3.7.20)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed ags-fx-envelope be explicite about floating point arithmetic
+
 ags (3.7.19)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
